# fuego-wallet

./: .flutter-plugins  .flutter-plugins-dependencies  .gitignore  .gitmodules  ANDROID_RELEASE_SETUP.md  BUILD_FIX_SUMMARY.md  BURN_TRANSACTION_INTEGRATION.md  Boost CMake Configuration Fix  CHANGELOG.md  CHECKLIST.md  CMakeLists.txt  COMPLETE_FUEGO_WALLET_OVERVIEW.md  CONTRIBUTING.md  CryptoNoteWallet.cmake  FINAL_SUMMARY.md  FUEGO_WALLET_SUMMARY.md  Fix Fuego Wallet CI Build Git JSON  Fuego Wallet Network Connection Fix  Fuego-GUI.pro  Fuego-GUI.pro.backup  IMPLEMENTATION_SUMMARY.md  INTEGRATION_CHANGES.md  INTEGRATION_RECOMMENDATION.md  IOS_DEVELOPMENT_SETUP.md  Integrating Fuego Build Wallet  LICENSE  QREncode.cmake  README.md  REPOSITORY_SETUP_GUIDE.md  WEB_GATEWAY_ANALYSIS.md  analysis_options.yaml  apt-packages.txt  brew-packages.txt  proxy.py  pubspec.yaml  vcpkg.json  workspace.properties
.github/: APPIMAGE_BUILD_FIX.md
.github/workflows/: android-release.yml  build.yml  check.yml.disabled  ci.yml  desktop-build.yml  download-stark-cli.yml  fdroid-release.yml  fdroid-release.yml.disable  flutter-desktop.yml  flutter-desktop.yml.disable  flutter极desktop.yml  fuego-wallet-ci.yml  fuego-wallet-desktop.yml  fuego-wallet.yml  ios-release.yml  linux-appstore-release.yml  linux-appstore-release.yml.disable  macOS.yml  macos-apple-silicon-only.yml  macos-simple.yml  macos-wallet-only.yml  release.yml  sdk-build.yml  self-heal.yml  ubuntu20.yml  ubuntu22.yml  xfg-wallet-desktop.yml  xfg-wallet-desktop.yml.disable
App/: project.properties
App/Configuration/: project.config
App/Pages/: Home.uiapp
android/app/: build.gradle  proguard-rules.pro
assets/charts/: tv_chart.html
cryptonote/: .gitignore
fuego-sdk/: CMakeLists.txt  INTEGRATION.md  README.md  STATUS.md
fuego-sdk/dart/: pubspec.yaml
fuego-sdk/dart/ios/: fuego_sdk.podspec
fuego-sdk/dart/ios/Classes/: FuegoSdkPlugin.swift
fuego-sdk/dart/lib/: fuego_sdk.dart
fuego-sdk/dart/lib/src/: alias_service.dart  cd_service.dart  fuego_sdk.dart  fuego_sdk_bindings.dart  heat_service.dart  mining_service.dart  node_service.dart  pool_service.dart  swap_service.dart  wallet_service.dart
fuego-sdk/dart/linux/: CMakeLists.txt  fuego_sdk_plugin.cc  fuego_sdk_plugin.h
fuego-sdk/dart/macos/: CMakeLists.txt  fuego_sdk.podspec  fuego_sdk_plugin.h  fuego_sdk_plugin.mm
fuego-sdk/dart/macos/Classes/: FuegoSdkPlugin.swift
fuego-sdk/dart/windows/: CMakeLists.txt  fuego_sdk_plugin.cc  fuego_sdk_plugin.h
fuego-sdk/flutter_plugin/: README.md  pubspec.yaml
fuego-sdk/flutter_plugin/lib/: fuego_sdk_flutter.dart
fuego-sdk/flutter_plugin/lib/src/: alias_service.dart  cd_service.dart  fuego_sdk_plugin.dart  heat_service.dart  mining_service.dart  node_service.dart  swap_service.dart
fuego-sdk/include/: fuego_sdk.h
fuego-sdk/src/: sdk.cpp
fuego-sdk/src/alias/: alias_service.cpp  alias_service.h
fuego-sdk/src/cd/: deposit.cpp  deposit.h
fuego-sdk/src/heat/: heat_proof.cpp  heat_proof.h
fuego-sdk/src/mining/: miner.cpp  miner.h
fuego-sdk/src/node/: node_manager.cpp  node_manager.h
fuego-sdk/src/pool/: pool_manager.cpp  pool_manager.h
fuego-sdk/src/swap/: atomic_swap.cpp  atomic_swap.h
fuego-sdk/src/wallet/: wallet_manager.cpp  wallet_manager.h
ios/: exportOptions.plist
ios/Runner/: Info.plist
lib/: main.dart  main.dart.with_screenutil
linux/: CMakeLists.txt  main.cc  my_application.cc  xfg-wallet.desktop
native/crypto/: Cargo.toml  build.rs
native/crypto/bindings/: crypto_bindings.dart
native/crypto/src/: lib.rs
native/crypto/src/cn/: hash.h  slow-hash.c
rust-fuego-wallet/: Cargo.toml  SECURITY_REVIEW.md
rust-fuego-wallet/core/: Cargo.toml
rust-fuego-wallet/core/src/: base58.rs  crypto.rs  keystore.rs  main.rs  scanner.rs  server.rs  wallet.rs  wallet_service.rs  walletd.rs
rust-fuego-wallet/fuego-sdk/fuego-crypto/: Cargo.toml
rust-fuego-wallet/fuego-sdk/fuego-crypto/src/: lib.rs
rust-fuego-wallet/fuego-sdk/fuego-ffi/: Cargo.toml
rust-fuego-wallet/fuego-sdk/fuego-ffi/src/: lib.rs
rust-fuego-wallet/fuego-sdk/fuego-sdk/: Cargo.toml
rust-fuego-wallet/fuego-sdk/fuego-sdk/src/: alias.rs  builder.rs  cd_market.rs  crypto.rs  error.rs  lib.rs  node.rs  orderbook.rs  scanner.rs  traits.rs  types.rs  vault.rs  wallet.rs
rust-fuego-wallet/fuego-sdk/fuego-sdk/src/chain/: bitcoin.rs  btc_rpc.rs  evm.rs  evm_rpc.rs  mod.rs
rust-fuego-wallet/fuego-sdk/fuego-sdk/src/network/: mod.rs  null.rs  rpc.rs
rust-fuego-wallet/fuego-sdk/fuego-sdk/src/store/: memory.rs  mod.rs  sled.rs
rust-fuego-wallet/fuego-sdk/fuego-sdk/tests/: sdk_tests.rs
rust-fuego-wallet/fuego-sdk/fuego-vault/: Cargo.toml
rust-fuego-wallet/fuego-sdk/fuego-vault/src/: lib.rs  recovery.rs
rust-fuego-wallet/src/: crypto.rs  daemon.rs  fuegod.rs  keystore.rs  main.rs  release.rs  server.rs  wallet.rs  walletd.rs
scripts/: README_BUILD_MONITOR.md  android-release-key.keystore  auto_fix_builds.py  auto_stark_proof.sh  build-all-platforms.sh  build-fuego-source.sh  build_with_stark.sh  burn_transaction_detector.py  ci-monitor.sh  create_release.sh  dart-healer.py  dart-preflight.py  download-binaries.sh  download-stark-cli.sh  ensure-binaries.sh  fix_and_build.sh  fix_build_issues.sh  get_walletd_binary.sh  ios-test-runner.sh  monitor-ci.sh  monitor_builds 2.sh  monitor_builds.sh  monitor_ci.sh  monitor_macos_silicon.sh  progress_logger.py  run_build_monitor.sh  setup-android-keystore.sh  setup-ios-development.sh  simple_monitor.sh  stark_proof_generator.py  test_auto_stark.sh  validate-android-setup.sh  validate-ios-setup.sh
src/: AliasProvider.cpp  CryptoNoteWalletConfig.h  LoggerAdapter.cpp  ProofGenerationWorker.cpp  ProofGenerationWorker.h  Settings.cpp  Settings.h  StarkProofService.cpp  StarkProofService.h  WalletAdapter.cpp  main.cpp  resources.qrc
test/: crypto_bindings_test.dart  rpc_service_test.dart  security_service_test.dart  widget_test.dart
web/: index.html  manifest.json
windows/: CMakeLists.txt
xfg-stark-3/: COLDProofVerifier_v3.sol  COLD_VS_HEAT_COMPARISON.md  DEPLOYMENT_CHECKLIST_V3.md
(+192 files in other folders)
