[package]
name = "fuego-crypto"
version = "0.1.0"
edition = "2021"

[lib]
name = "fuego_crypto"
crate-type = ["cdylib", "staticlib", "rlib"]

[dependencies]
ed25519-dalek = { version = "2.0", features = ["rand_core"] }
curve25519-dalek = "4.0"
rand = "0.8"
bs58 = "0.5"
sha3 = "0.10"
zeroize = { version = "1.7", features = ["derive"] }
serde = { version = "1", features = ["derive"] }

[dev-dependencies]
hex = "0.4"
