[package]
name = "fuego-ffi"
version = "0.1.0"
edition = "2021"

[lib]
name = "fuego_ffi"
crate-type = ["cdylib", "staticlib"]

[dependencies]
fuego-crypto = { path = "../fuego-crypto" }
fuego-vault = { path = "../fuego-vault" }
fuego-sdk = { path = "../fuego-sdk" }
ed25519-dalek = "2.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
bincode = "1.3"
hex = "0.4"
rand = "0.8"
