[package]
name = "fuego-sdk"
version = "0.1.0"
edition = "2021"
description = "Fuego SDK — Embedded node, wallet, crypto, and network providers"
license = "MIT"

[features]
default = ["std", "rpc"]
std = []
rpc = ["dep:reqwest", "dep:serde_json"]
storage = ["dep:sled"]
full = ["rpc", "storage"]

[dependencies]
fuego-crypto = { path = "../fuego-crypto" }
fuego-vault = { path = "../fuego-vault" }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", optional = true }
bincode = "1.3"
thiserror = "1.0"
async-trait = "0.1"
tokio = { version = "1", features = ["full"] }
sha2 = "0.10"
sha3 = "0.10"
hex = "0.4"
zeroize = { version = "1.7", features = ["derive"] }
chrono = "0.4"
ed25519-dalek = "2.0"
reqwest = { version = "0.11", features = ["json"], optional = true }
sled = { version = "0.34", optional = true }

[dev-dependencies]
tempfile = "3"
tokio = { version = "1", features = ["full", "test-util"] }
